[package]
name    = "regex-cache"
version = "0.2.1"
edition = '2021'

authors = ["meh. <meh@1aim.com>"]
license = "MIT"

description = "Lazy and cached regular expressions."
repository  = "https://github.com/1aim/rust-regex-cache"
keywords    = ["regex", "lazy", "cache"]
readme = "README.md"

[dependencies]
regex        = "1.10"
regex-syntax = "0.8"
lru-cache    = "0.1.2"
oncemutex    = "0.1.1"
